# OBJParser

./: .gitignore  CMakeLists.txt  Makefile  OBJParser.sln
Debug/: OBJParserTesting.ilk
OBJParser/: Color.cpp  Color.h  CommentScannerState.cpp  CommentScannerState.h  EndScannerState.cpp  EndScannerState.h  ErrorScannerState.cpp  ErrorScannerState.h  Face.cpp  FaceExpression.h  FaceVertex.h  Group.cpp  Group.h  IdentifierScannerState.h  LineExpression.h  Material.cpp  MaterialExpression.h  ModelObject.cpp  ModelObject.h  NonTerminalExpression.cpp  NonTerminalExpression.h  NormalExpression.cpp  NormalExpression.h  NumberScannerState.cpp  OBJData.h  OBJParser.cpp  OBJParser.vcxproj  OBJParser.vcxproj.filters  OBJParserTester.cpp  ObjectExpression.cpp  ObjectExpression.h  Parser.cpp  Parser.h  ReadMe.txt  Scanner.cpp  ScannerStates.h  SymbolScannerState.h  Token.cpp  Token.h  TokenTypes.h  (+5 more)
OBJParser/Debug/: OBJParser.idb
OBJParser/Debug/OBJParser.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  OBJParser.lastbuildstate  lib.command.1.tlog
OBJParser/Release/OBJParser.tlog/: CL.command.1.tlog  CL.read.1.tlog  Lib-link.write.1.tlog  OBJParser.lastbuildstate  lib.command.1.tlog
OBJParserTester/: unittest1.cpp
OBJParserTesting/: OBJParserTesting.vcxproj  OBJParserTesting.vcxproj.filters
OBJParserTesting/Debug/OBJParserTesting.tlog/: CL.read.1.tlog  link.read.1.tlog
src/phobos2390/OBJParser/: CMakeLists.txt  Color.h  CommentScannerState.cpp  CommentScannerState.h  DatalogProgram.h  EndScannerState.cpp  EndScannerState.h  ErrorScannerState.cpp  ErrorScannerState.h  Face.cpp  Face.h  FaceExpression.cpp  FaceExpression.h  FaceVertex.cpp  FaceVertex.h  Group.cpp  Group.h  IExpression.cpp  IExpression.h  IScannerState.cpp  IScannerState.h  IdentifierScannerState.cpp  IdentifierScannerState.h  LineExpression.cpp  LineExpression.h  Material.h  MaterialExpression.cpp  MaterialExpression.h  ModelObject.cpp  ModelObject.h  NormalExpression.cpp  NormalExpression.h  NumberScannerState.cpp  NumberScannerState.h  OBJData.cpp  OBJData.h  OBJParser.cpp  OBJParser.h  OBJParserTester.cpp  ObjectExpression.cpp  (+21 more)
src/phobos2390/OBJParser/Debug/OBJParser.tlog/: CL.read.1.tlog  Lib-link.write.1.tlog
src/phobos2390/OBJParser/OBJParserTester/: OBJParserTester.vcxproj  stdafx.cpp  targetver.h  unittest1.cpp
src/phobos2390/OBJParser/OBJParserTesting/: OBJParserTesting.cpp  ReadMe.txt
src/phobos2390/OBJParser/OBJParserTesting/Debug/: vc120.idb
src/phobos2390/OBJParser/OBJParserTesting/Debug/OBJParserTesting.tlog/: CL.write.1.tlog  OBJParserTesting.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.write.1.tlog
src/phobos2390/OBJParser/Release/OBJParser.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog
src/phobos2390/OBJParser/objinfo/: OBJInfo.cpp
